# crumble

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: audio.rs  fraction.rs  hap.rs  lib.rs  lisp.rs  osc.rs  pattern.rs  player.rs  scheduler.rs  state.rs  timespan.rs  wasm.rs
tests/: integration_test.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: audio.ts  eventHighlight.ts  export.ts  main.ts  numberDrag.ts  pianoroll.ts  scope.ts  style.css  widgets.ts
