[package]
name = "crumble"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Strudel pattern language for algorithmic music"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["audio", "osc"]
audio = ["cpal", "crossbeam-channel"]
osc = ["rosc"]
wasm = ["wasm-bindgen", "serde", "serde_json", "serde-wasm-bindgen", "console_error_panic_hook"]

[dependencies]
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Audio output (native only)
cpal = { version = "0.15", optional = true }

# OSC for SuperCollider communication (native only)
rosc = { version = "0.10", optional = true }

# Thread-safe channels (native only, not available in WASM)
crossbeam-channel = { version = "0.5", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]

[profile.release]
opt-level = "s"
lto = true
